k8s-dashboard/dashboard.route.yaml
# apiVersion: traefik.containo.us/v1alpha1
# kind: ServersTransport
# metadata:
#   name: kubernetes-dashboard-transport
#   namespace: kubernetes-dashboard

# spec:
#   serverName: kubernetes-dashboard
#   insecureSkipVerify: true
# ---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kubernetes-dahsboard-ingress-route
  namespace: kubernetes-dashboard
spec:  
  entryPoints:
    - websecure
  routes:
  - match: Host(`kub-dashboard-r1.navida.dev`)
    kind: Rule
    services:
    - kind: Service
      name: kubernetes-dashboard
      namespace: kubernetes-dashboard
      port: 443
      # scheme: http
      # serversTransport: kubernetes-dashboard-transport
